--- a/Extensions/BulletChartD3/styles.css
+++ b/Extensions/BulletChartD3/styles.css
@@ -1,12 +1,14 @@
 
 
 .bullet { font: 10px sans-serif; }
-.bullet .marker { stroke: #000; stroke-width: 2px; }
+.bullet .marker.s0 { stroke: #000; stroke-width: 2px; }
+.bullet .marker.s1 { stroke: #333; stroke-width: 2px; }
 .bullet .tick line { stroke: #666; stroke-width: .5px; }
 .bullet .range.s0 { fill: #eee; }
 .bullet .range.s1 { fill: #ddd; }
 .bullet .range.s2 { fill: #ccc; }
 .bullet .measure.s0 { fill: lightsteelblue; }
 .bullet .measure.s1 { fill: steelblue; }
+.bullet .measure.s2 { fill: darksteelblue; }
 .bullet .title { font-size: 14px; font-weight: bold; }
 .bullet .subtitle { fill: #999; }
